# haddock-example

./: README.md  cabal.project
docs/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+7 more)
docs/base/: Control-Applicative.html  Control-Arrow.html  Control-Category.html  Control-Concurrent-Chan.html  Control-Concurrent-MVar.html  Control-Concurrent-QSem.html  Control-Concurrent-QSemN.html  Control-Concurrent.html  Control-Exception-Base.html  Control-Exception.html  Control-Monad-Fail.html  Control-Monad-Fix.html  Control-Monad-IO-Class.html  Control-Monad-Instances.html  Control-Monad-ST-Lazy-Safe.html  Control-Monad-ST-Lazy-Unsafe.html  Control-Monad-ST-Lazy.html  Control-Monad-ST-Safe.html  Control-Monad-ST-Strict.html  Control-Monad-ST-Unsafe.html  Control-Monad-ST.html  Control-Monad-Zip.html  Data-Bits.html  (+247 more)
package-a/: package-a.cabal
package-b/: package-b.cabal
package-b/src/: B.hs
(+58 files in other folders)
